--- a/41_4_[PROJETO]_Previsão_de_Demanda_(Time_Series_Forecasting).ipynb
+++ b/41_4_[PROJETO]_Previsão_de_Demanda_(Time_Series_Forecasting).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyND1iWUlwPMBLdr7kwc5NcJ",
+      "authorship_tag": "ABX9TyNDsl0tF0X1dAju35lbxMi6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -274,7 +274,7 @@
           "height": 223
         },
         "id": "LxEx53VWpmVd",
-        "outputId": "ae5ffd45-0bc0-4847-c0ed-82a75ac0dce8"
+        "outputId": "c4c98705-ed68-41f2-dc13-1cd033e046fc"
       },
       "execution_count": 2,
       "outputs": [
@@ -305,7 +305,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bb3ff1c5-d89f-4563-bc21-5da016541ecf\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d4f4638a-26f0-4d3c-af6f-5ffe36bc80f7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -402,7 +402,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bb3ff1c5-d89f-4563-bc21-5da016541ecf')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d4f4638a-26f0-4d3c-af6f-5ffe36bc80f7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -454,12 +454,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-bb3ff1c5-d89f-4563-bc21-5da016541ecf button.colab-df-convert');\n",
+              "        document.querySelector('#df-d4f4638a-26f0-4d3c-af6f-5ffe36bc80f7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-bb3ff1c5-d89f-4563-bc21-5da016541ecf');\n",
+              "        const element = document.querySelector('#df-d4f4638a-26f0-4d3c-af6f-5ffe36bc80f7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -479,8 +479,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-9171c2ad-226d-47b3-aa27-0ebb29422608\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9171c2ad-226d-47b3-aa27-0ebb29422608')\"\n",
+              "<div id=\"df-9eab2efc-1561-4ee9-a616-e0afb6fcf172\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9eab2efc-1561-4ee9-a616-e0afb6fcf172')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -599,7 +599,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-9171c2ad-226d-47b3-aa27-0ebb29422608 button');\n",
+              "        document.querySelector('#df-9eab2efc-1561-4ee9-a616-e0afb6fcf172 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -669,7 +669,7 @@
           "height": 206
         },
         "id": "0t4O8oj3pxW0",
-        "outputId": "b23dab16-cf40-4524-df4e-72e1e2afadf6"
+        "outputId": "537a7bae-701f-4c57-c2e3-b8b0818b77f8"
       },
       "execution_count": 3,
       "outputs": [
@@ -693,7 +693,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-de2f5e6a-1162-4657-aa98-617db2dbd48f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3bd75230-0608-422f-ad46-d5e65a659274\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -790,7 +790,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-de2f5e6a-1162-4657-aa98-617db2dbd48f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3bd75230-0608-422f-ad46-d5e65a659274')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -842,12 +842,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-de2f5e6a-1162-4657-aa98-617db2dbd48f button.colab-df-convert');\n",
+              "        document.querySelector('#df-3bd75230-0608-422f-ad46-d5e65a659274 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-de2f5e6a-1162-4657-aa98-617db2dbd48f');\n",
+              "        const element = document.querySelector('#df-3bd75230-0608-422f-ad46-d5e65a659274');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -867,8 +867,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-97bf64c9-84e9-4f7e-b136-7fd4fc34f1e5\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-97bf64c9-84e9-4f7e-b136-7fd4fc34f1e5')\"\n",
+              "<div id=\"df-7b3c37b5-a800-4c9b-befe-795b62ab4e97\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7b3c37b5-a800-4c9b-befe-795b62ab4e97')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -987,7 +987,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-97bf64c9-84e9-4f7e-b136-7fd4fc34f1e5 button');\n",
+              "        document.querySelector('#df-7b3c37b5-a800-4c9b-befe-795b62ab4e97 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1015,7 +1015,7 @@
       ],
       "metadata": {
         "id": "EOjsB-_bp7JE",
-        "outputId": "0ac350c5-07de-4d6d-b6a2-30442a896b6d",
+        "outputId": "ae580767-93c9-4155-bd1d-4fa346f3e1c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -1043,7 +1043,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6c8f4cac-d8ec-400c-aaa0-6ffca4f2278b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b2a43bd5-b099-4bfd-a8c0-a6cf9317cc9e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1140,7 +1140,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6c8f4cac-d8ec-400c-aaa0-6ffca4f2278b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b2a43bd5-b099-4bfd-a8c0-a6cf9317cc9e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1192,12 +1192,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6c8f4cac-d8ec-400c-aaa0-6ffca4f2278b button.colab-df-convert');\n",
+              "        document.querySelector('#df-b2a43bd5-b099-4bfd-a8c0-a6cf9317cc9e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6c8f4cac-d8ec-400c-aaa0-6ffca4f2278b');\n",
+              "        const element = document.querySelector('#df-b2a43bd5-b099-4bfd-a8c0-a6cf9317cc9e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1217,8 +1217,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-92e53bd2-4dae-4a30-84be-de50ea560bd6\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-92e53bd2-4dae-4a30-84be-de50ea560bd6')\"\n",
+              "<div id=\"df-aa73e928-722a-47fc-b5a2-c88fef638a42\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-aa73e928-722a-47fc-b5a2-c88fef638a42')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1337,7 +1337,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-92e53bd2-4dae-4a30-84be-de50ea560bd6 button');\n",
+              "        document.querySelector('#df-aa73e928-722a-47fc-b5a2-c88fef638a42 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1368,6 +1368,107 @@
       ],
       "metadata": {
         "id": "XCsQn7JYp9h-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# verificando a integridade dos dados\n",
+        "df.info()"
+      ],
+      "metadata": {
+        "id": "UwLZf1cckJPb",
+        "outputId": "bdec50bb-c5b4-4393-93b1-eeb290a3f6f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 219 entries, 0 to 218\n",
+            "Data columns (total 9 columns):\n",
+            " #   Column     Non-Null Count  Dtype \n",
+            "---  ------     --------------  ----- \n",
+            " 0   item_id    219 non-null    int64 \n",
+            " 1   name       219 non-null    object\n",
+            " 2   producer   219 non-null    object\n",
+            " 3   country    219 non-null    object\n",
+            " 4   region     219 non-null    object\n",
+            " 5   vintage    219 non-null    object\n",
+            " 6   kind       219 non-null    object\n",
+            " 7   price_brl  219 non-null    object\n",
+            " 8   price_usd  219 non-null    object\n",
+            "dtypes: int64(1), object(8)\n",
+            "memory usage: 15.5+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# transformando as colunas\n",
+        "df.item_id = df.item_id.astype(str)\n",
+        "df.price_brl = pd.to_numeric(df.price_brl)\n",
+        "df.price_usd = pd.to_numeric(df.price_usd)"
+      ],
+      "metadata": {
+        "id": "5zksk7DlkXdp"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# verificando o conjunto de dados\n",
+        "df.info()"
+      ],
+      "metadata": {
+        "id": "Zabz50SDkZZZ",
+        "outputId": "4a457c3b-4f91-4ebd-bd6e-c0993002e140",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 219 entries, 0 to 218\n",
+            "Data columns (total 9 columns):\n",
+            " #   Column     Non-Null Count  Dtype  \n",
+            "---  ------     --------------  -----  \n",
+            " 0   item_id    219 non-null    object \n",
+            " 1   name       219 non-null    object \n",
+            " 2   producer   219 non-null    object \n",
+            " 3   country    219 non-null    object \n",
+            " 4   region     219 non-null    object \n",
+            " 5   vintage    219 non-null    object \n",
+            " 6   kind       219 non-null    object \n",
+            " 7   price_brl  219 non-null    float64\n",
+            " 8   price_usd  219 non-null    float64\n",
+            "dtypes: float64(2), object(7)\n",
+            "memory usage: 15.5+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Outra limpeza que faremos é mudar a variável `vintage`, nas linhas onde está escrito NV (Non-Vintage) para 0, para que possamos mudar para um formato numérico."
+      ],
+      "metadata": {
+        "id": "OE2p7mT8kcy6"
       }
     }
   ]
