--- a/42_Workflow_para_Machine_Learning.ipynb
+++ b/42_Workflow_para_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOqjt/q2K4gbKYUW1xXV104",
+      "authorship_tag": "ABX9TyPBBV61NYcPmIXSiDvPNliP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,13 +90,74 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Exemplo 1**"
+      ],
+      "metadata": {
+        "id": "Dkw6SQ6n28ea"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "5by1tTfB1kP_"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "def load_imdb_sentiment_analysis_dataset(data_path, seed=123):\n",
+        "    \"\"\"Loads the IMDb movie reviews sentiment analysis dataset.\n",
+        "\n",
+        "    # Arguments\n",
+        "        data_path: string, path to the data directory.\n",
+        "        seed: int, seed for randomizer.\n",
+        "\n",
+        "    # Returns\n",
+        "        A tuple of training and validation data.\n",
+        "        Number of training samples: 25000\n",
+        "        Number of test samples: 25000\n",
+        "        Number of categories: 2 (0 - negative, 1 - positive)\n",
+        "\n",
+        "    # References\n",
+        "        Mass et al., http://www.aclweb.org/anthology/P11-1015\n",
+        "\n",
+        "        Download and uncompress archive from:\n",
+        "        http://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
+        "    \"\"\"\n",
+        "    imdb_data_path = os.path.join(data_path, 'aclImdb')\n",
+        "\n",
+        "    # Load the training data\n",
+        "    train_texts = []\n",
+        "    train_labels = []\n",
+        "    for category in ['pos', 'neg']:\n",
+        "        train_path = os.path.join(imdb_data_path, 'train', category)\n",
+        "        for fname in sorted(os.listdir(train_path)):\n",
+        "            if fname.endswith('.txt'):\n",
+        "                with open(os.path.join(train_path, fname)) as f:\n",
+        "                    train_texts.append(f.read())\n",
+        "                train_labels.append(0 if category == 'neg' else 1)\n",
+        "\n",
+        "    # Load the validation data.\n",
+        "    test_texts = []\n",
+        "    test_labels = []\n",
+        "    for category in ['pos', 'neg']:\n",
+        "        test_path = os.path.join(imdb_data_path, 'test', category)\n",
+        "        for fname in sorted(os.listdir(test_path)):\n",
+        "            if fname.endswith('.txt'):\n",
+        "                with open(os.path.join(test_path, fname)) as f:\n",
+        "                    test_texts.append(f.read())\n",
+        "                test_labels.append(0 if category == 'neg' else 1)\n",
+        "\n",
+        "    # Shuffle the training data and labels.\n",
+        "    random.seed(seed)\n",
+        "    random.shuffle(train_texts)\n",
+        "    random.seed(seed)\n",
+        "    random.shuffle(train_labels)\n",
+        "\n",
+        "    return ((train_texts, np.array(train_labels)),\n",
+        "            (test_texts, np.array(test_labels)))"
+      ]
     }
   ]
 }
