--- a/42_Workflow_para_Machine_Learning.ipynb
+++ b/42_Workflow_para_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBBV61NYcPmIXSiDvPNliP",
+      "authorship_tag": "ABX9TyOh18+rWmsPPepqsRzqOJ2P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -158,6 +158,72 @@
         "    return ((train_texts, np.array(train_labels)),\n",
         "            (test_texts, np.array(test_labels)))"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Exemplo 2**"
+      ],
+      "metadata": {
+        "id": "I_YhBw153Wlx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# import the necessary packages\n",
+        "import numpy as np\n",
+        "import cv2\n",
+        "import os\n",
+        "\n",
+        "class SimpleDatasetLoader:\n",
+        "\tdef __init__(self, preprocessors=None):\n",
+        "\t\t# store the image preprocessor\n",
+        "\t\tself.preprocessors = preprocessors\n",
+        "\n",
+        "\t\t# if the preprocessors are None, initialize them as an\n",
+        "\t\t# empty list\n",
+        "\t\tif self.preprocessors is None:\n",
+        "\t\t\tself.preprocessors = []\n",
+        "\n",
+        "\tdef load(self, imagePaths, verbose=-1):\n",
+        "\t\t# initialize the list of features and labels\n",
+        "\t\tdata = []\n",
+        "\t\tlabels = []\n",
+        "\n",
+        "\t\t# loop over the input images\n",
+        "\t\tfor (i, imagePath) in enumerate(imagePaths):\n",
+        "\t\t\t# load the image and extract the class label assuming\n",
+        "\t\t\t# that our path has the following format:\n",
+        "\t\t\t# /path/to/dataset/{class}/{image}.jpg\n",
+        "\t\t\timage = cv2.imread(imagePath)\n",
+        "\t\t\tlabel = imagePath.split(os.path.sep)[-2]\n",
+        "\n",
+        "\t\t\t# check to see if our preprocessors are not None\n",
+        "\t\t\tif self.preprocessors is not None:\n",
+        "\t\t\t\t# loop over the preprocessors and apply each to\n",
+        "\t\t\t\t# the image\n",
+        "\t\t\t\tfor p in self.preprocessors:\n",
+        "\t\t\t\t\timage = p.preprocess(image)\n",
+        "\n",
+        "\t\t\t# treat our processed image as a \"feature vector\"\n",
+        "\t\t\t# by updating the data list followed by the labels\n",
+        "\t\t\tdata.append(image)\n",
+        "\t\t\tlabels.append(label)\n",
+        "\n",
+        "\t\t\t# show an update every `verbose` images\n",
+        "\t\t\tif verbose > 0 and i > 0 and (i + 1) % verbose == 0:\n",
+        "\t\t\t\tprint(\"[INFO] processed {}/{}\".format(i + 1,\n",
+        "\t\t\t\t\tlen(imagePaths)))\n",
+        "\n",
+        "\t\t# return a tuple of the data and labels\n",
+        "\t\treturn (np.array(data), np.array(labels))"
+      ],
+      "metadata": {
+        "id": "QYKKuF6q3ZTg"
+      },
+      "execution_count": 2,
+      "outputs": []
     }
   ]
 }
