--- a/42_Workflow_para_Machine_Learning.ipynb
+++ b/42_Workflow_para_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOh18+rWmsPPepqsRzqOJ2P",
+      "authorship_tag": "ABX9TyOv+MEMNmlMe5Svwe1DSkYi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -224,6 +224,234 @@
       },
       "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Exemplo 3**"
+      ],
+      "metadata": {
+        "id": "GChOKCut3hID"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# USAGE\n",
+        "# python build_lisa_records.py\n",
+        "\n",
+        "# import the necessary packages\n",
+        "from config import lisa_config as config\n",
+        "from pyimagesearch.utils.tfannotation import TFAnnotation\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from PIL import Image\n",
+        "import tensorflow as tf\n",
+        "import os\n",
+        "\n",
+        "def main(_):\n",
+        "\t# open the classes output file\n",
+        "\tf = open(config.CLASSES_FILE, \"w\")\n",
+        "\n",
+        "\t# loop over the classes\n",
+        "\tfor (k, v) in config.CLASSES.items():\n",
+        "\t\t# construct the class information and write to file\n",
+        "\t\titem = (\"item {\\n\"\n",
+        "\t\t\t\t\"\\tid: \" + str(v) + \"\\n\"\n",
+        "\t\t\t\t\"\\tname: '\" + k + \"'\\n\"\n",
+        "\t\t\t\t\"}\\n\")\n",
+        "\t\tf.write(item)\n",
+        "\n",
+        "\t# close the output classes file\n",
+        "\tf.close()\n",
+        "\n",
+        "\t# initialize a data dictionary used to map each image filename\n",
+        "\t# to all bounding boxes associated with the image, then load\n",
+        "\t# the contents of the annotations file\n",
+        "\tD = {}\n",
+        "\trows = open(config.ANNOT_PATH).read().strip().split(\"\\n\")\n",
+        "\n",
+        "\t# loop over the individual rows, skipping the header\n",
+        "\tfor row in rows[1:]:\n",
+        "\t\t# break the row into components\n",
+        "\t\trow = row.split(\",\")[0].split(\";\")\n",
+        "\t\t(imagePath, label, startX, startY, endX, endY, _) = row\n",
+        "\t\t(startX, startY) = (float(startX), float(startY))\n",
+        "\t\t(endX, endY) = (float(endX), float(endY))\n",
+        "\n",
+        "\t\t# if we are not interested in the label, ignore it\n",
+        "\t\tif label not in config.CLASSES:\n",
+        "\t\t\tcontinue\n",
+        "\n",
+        "\t\t# build the path to the input image, then grab any other\n",
+        "\t\t# bounding boxes + labels associated with the image\n",
+        "\t\t# path, labels, and bounding box lists, respectively\n",
+        "\t\tp = os.path.sep.join([config.BASE_PATH, imagePath])\n",
+        "\t\tb = D.get(p, [])\n",
+        "\n",
+        "\t\t# build a tuple consisting of the label and bounding box,\n",
+        "\t\t# then update the list and store it in the dictionary\n",
+        "\t\tb.append((label, (startX, startY, endX, endY)))\n",
+        "\t\tD[p] = b\n",
+        "\n",
+        "\t# create training and testing splits from our data dictionary\n",
+        "\t(trainKeys, testKeys) = train_test_split(list(D.keys()),\n",
+        "\t\ttest_size=config.TEST_SIZE, random_state=42)\n",
+        "\n",
+        "\t# initialize the data split files\n",
+        "\tdatasets = [\n",
+        "\t\t(\"train\", trainKeys, config.TRAIN_RECORD),\n",
+        "\t\t(\"test\", testKeys, config.TEST_RECORD)\n",
+        "\t]\n",
+        "\n",
+        "\t# loop over the datasets\n",
+        "\tfor (dType, keys, outputPath) in datasets:\n",
+        "\t\t# initialize the TensorFlow writer and initialize the total\n",
+        "\t\t# number of examples written to file\n",
+        "\t\tprint(\"[INFO] processing '{}'...\".format(dType))\n",
+        "\t\twriter = tf.python_io.TFRecordWriter(outputPath)\n",
+        "\t\ttotal = 0\n",
+        "\n",
+        "\t\t# loop over all the keys in the current set\n",
+        "\t\tfor k in keys:\n",
+        "\t\t\t# load the input image from disk as a TensorFlow object\n",
+        "\t\t\tencoded = tf.gfile.GFile(k, \"rb\").read()\n",
+        "\t\t\tencoded = bytes(encoded)\n",
+        "\n",
+        "\t\t\t# load the image from disk again, this time as a PIL\n",
+        "\t\t\t# object\n",
+        "\t\t\tpilImage = Image.open(k)\n",
+        "\t\t\t(w, h) = pilImage.size[:2]\n",
+        "\n",
+        "\t\t\t# parse the filename and encoding from the input path\n",
+        "\t\t\tfilename = k.split(os.path.sep)[-1]\n",
+        "\t\t\tencoding = filename[filename.rfind(\".\") + 1:]\n",
+        "\n",
+        "\t\t\t# initialize the annotation object used to store\n",
+        "\t\t\t# information regarding the bounding box + labels\n",
+        "\t\t\ttfAnnot = TFAnnotation()\n",
+        "\t\t\ttfAnnot.image = encoded\n",
+        "\t\t\ttfAnnot.encoding = encoding\n",
+        "\t\t\ttfAnnot.filename = filename\n",
+        "\t\t\ttfAnnot.width = w\n",
+        "\t\t\ttfAnnot.height = h\n",
+        "\n",
+        "\t\t\t# loop over the bounding boxes + labels associated with\n",
+        "\t\t\t# the image\n",
+        "\t\t\tfor (label, (startX, startY, endX, endY)) in D[k]:\n",
+        "\t\t\t\t# TensorFlow assumes all bounding boxes are in the\n",
+        "\t\t\t\t# range [0, 1] so we need to scale them\n",
+        "\t\t\t\txMin = startX / w\n",
+        "\t\t\t\txMax = endX / w\n",
+        "\t\t\t\tyMin = startY / h\n",
+        "\t\t\t\tyMax = endY / h\n",
+        "\n",
+        "\t\t\t\t# update the bounding boxes + labels lists\n",
+        "\t\t\t\ttfAnnot.xMins.append(xMin)\n",
+        "\t\t\t\ttfAnnot.xMaxs.append(xMax)\n",
+        "\t\t\t\ttfAnnot.yMins.append(yMin)\n",
+        "\t\t\t\ttfAnnot.yMaxs.append(yMax)\n",
+        "\t\t\t\ttfAnnot.textLabels.append(label.encode(\"utf8\"))\n",
+        "\t\t\t\ttfAnnot.classes.append(config.CLASSES[label])\n",
+        "\t\t\t\ttfAnnot.difficult.append(0)\n",
+        "\n",
+        "\t\t\t\t# increment the total number of examples\n",
+        "\t\t\t\ttotal += 1\n",
+        "\n",
+        "\t\t\t# encode the data point attributes using the TensorFlow\n",
+        "\t\t\t# helper functions\n",
+        "\t\t\tfeatures = tf.train.Features(feature=tfAnnot.build())\n",
+        "\t\t\texample = tf.train.Example(features=features)\n",
+        "\n",
+        "\t\t\t# add the example to the writer\n",
+        "\t\t\twriter.write(example.SerializeToString())\n",
+        "\n",
+        "\t\t# close the writer and print diagnostic information to the\n",
+        "\t\t# user\n",
+        "\t\twriter.close()\n",
+        "\t\tprint(\"[INFO] {} examples saved for '{}'\".format(total,\n",
+        "\t\t\tdType))\n",
+        "\n",
+        "# check to see if the main thread should be started\n",
+        "if __name__ == \"__main__\":\n",
+        "\ttf.app.run()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 383
+        },
+        "id": "_IefSAtE3kbZ",
+        "outputId": "881ec176-768f-469f-96fa-9e668391f490"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'config'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-3-92b3982f4a76>\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# import the necessary packages\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mconfig\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlisa_config\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpyimagesearch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtfannotation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTFAnnotation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'config'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2. Explorar os dados\n",
+        "\n",
+        "<center><img src=\"https://images.unsplash.com/photo-1614314266357-8a2e58059af5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1021&q=80\" width=\"50%\"></center>\n",
+        "\n",
+        "Entender os dados é a fase que permite você entender qual a melhor abordagem, melhor modelo, melhores features para serem usadas.\n",
+        "\n",
+        "Todos os insights devem ser anotados e documentados da melhor maneira possível. Alguns questionamentos a serem feitos são:\n",
+        "\n",
+        "* Qual o número de amostras?\n",
+        "* Qual o número total de classes?\n",
+        "* O dataset está balanceado?\n",
+        "* Quais variáveis são categóricas ou numéricas?\n",
+        "* Qual a porcentagem de valores ausentes?\n",
+        "* Há outliers presentes?\n",
+        "* Qual o tipo de distribuição das suas variáveis?\n",
+        "* Qual a variável alvo?\n",
+        "* Existe correlação entre as variáveis?\n",
+        "* Quais transformações são aplicáveis, começando a raciocinar com o nosso modelo?"
+      ],
+      "metadata": {
+        "id": "HY4JtXH53yig"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2.5 Escolher o Modelo\n",
+        "\n",
+        "<center><img src=\"https://www.incimages.com/uploaded_files/image/1920x1080/getty_178784049_9706479704500197_55273.jpg\" width=\"60%\"></center>\n",
+        "\n",
+        "\n",
+        "Baseado nas observações e métricas identificadas nas etapas anteriores, você começa a ter uma ideia de qual modelo seria mais adequado ao problema que você está atacando.\n",
+        "\n",
+        "Obviamente, depende muito da experiência e conhecimento, mas existem alguns guias que ajudam na escolha do algoritmo.\n",
+        "\n",
+        "Veja o material que está em anexo na aula."
+      ],
+      "metadata": {
+        "id": "FXvYGMKj38MI"
+      }
     }
   ]
 }
