--- a/42_Workflow_para_Machine_Learning.ipynb
+++ b/42_Workflow_para_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOv+MEMNmlMe5Svwe1DSkYi",
+      "authorship_tag": "ABX9TyNkjLQZ7071/ODXGO/0m9pA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -451,6 +451,33 @@
       ],
       "metadata": {
         "id": "FXvYGMKj38MI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 3 Preparação dos Dados\n",
+        "\n",
+        "<center><img src=\"https://images.unsplash.com/photo-1571666521805-f5e8423aba9d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80\" width=\"55%\"></center>\n",
+        "\n",
+        "Existem várias transformações que podem ser possíveis, mas às vezes fica confuso quais devemos fazer. Gosto de dividir entre transformações obrigatórias e transformações opcionais:\n",
+        "\n",
+        "1. Transformações obrigatórias\n",
+        "    * Converter dados não numéricos em numéricos, pois você não vai conseguir realizar operações vetorizadas sem converter strings, por exemplo, em variáveis numéricas.\n",
+        "    * Redimensionar inputs para valores fixos, pois o seu modelo espera ser alimentado sempre da mesma maneira.\n",
+        "    * Lidar com os valores ausentes, seja excluindo as entradas ou substituindo seus valores\n",
+        "    * Remoção de outliers, uma vez que eles irão dar um viés ao nosso modelo.\n",
+        "2. Transformações opcionais\n",
+        "    * Normalizar ou padronizar as features, dependendo do modelo e demandas específicas.\n",
+        "    * Tratamento adequado de strings, como deixar todos os caracteres em minúsculo.\n",
+        "    * Criar um fluxo para deixar o dataset sempre anônimo.\n",
+        "    * Reduzir a dimensionalidade do problema, dependendo da quantidade e qualidade das suas features.\n",
+        "    * Criar novas variáveis, buscando técnicas de feature engineering.\n",
+        "\n",
+        "Os dados podem ser preparados antes ou dentro do modelo. Veja as vantagens e desvantagens de cada uma dessas abordagens [neste link](https://developers.google.com/machine-learning/data-prep/transform/introduction)."
+      ],
+      "metadata": {
+        "id": "Y0YsdWvN4R1f"
       }
     }
   ]
