--- a/42_Workflow_para_Machine_Learning.ipynb
+++ b/42_Workflow_para_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkjLQZ7071/ODXGO/0m9pA",
+      "authorship_tag": "ABX9TyOaKNl3Eo1xSBKnCsx0ttEJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,7 +100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "5by1tTfB1kP_"
       },
@@ -222,7 +222,7 @@
       "metadata": {
         "id": "QYKKuF6q3ZTg"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -383,7 +383,7 @@
         "id": "_IefSAtE3kbZ",
         "outputId": "881ec176-768f-469f-96fa-9e668391f490"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -478,6 +478,45 @@
       ],
       "metadata": {
         "id": "Y0YsdWvN4R1f"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 4 Construir, Treinar e Avaliar o seu modelo\n",
+        "\n",
+        "<center><img src=\"https://images.unsplash.com/photo-1587654780291-39c9404d746b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80\" width=\"55%\"></center>\n",
+        "\n",
+        "Você pode construir um modelo baseline, ou seja, um modelo bem básico para ser o seu parâmetro de desempenho.\n",
+        "\n",
+        "É comum muitos cientistas de dados pegarem apenas as variáveis numéricas e não se preocuparem com feature engineering ou codificação de variáveis categóricas. Como eu disse, um baseline é opcional, mas muito bem-vindo.\n",
+        "\n",
+        "Você deve entender as melhores métricas desde já, para realizar testes com vários modelos diferentes. O desempenho deles pode ser inferido pelo cross-validation.\n",
+        "\n",
+        "O modelo de melhor desempenho, de acordo com o cross-validation, será escolhido e poderemos melhorar ainda mais o desempenho dele.\n",
+        "\n",
+        "Detalhe, esse modelo final deve ser treinado em cima do dataset de treino completo. Como ele ainda não teve contato com os dados de teste, a avaliação final será feita com eles."
+      ],
+      "metadata": {
+        "id": "bd8BMgbmIRrJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 5 Otimizar os Hiperparâmetros\n",
+        "\n",
+        "<center><img src=\"https://images.unsplash.com/photo-1628666173519-66351692f747?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1074&q=80\" width=\"55%\"></center>\n",
+        "\n",
+        "\n",
+        "Cada modelo tem a sua especificidade. Você deve conhecer cada parâmetro e o quanto ele impacta no desempenho e nas variáveis.\n",
+        "\n",
+        "Um modelo de Regressão Logística, por exemplo, tem muito pouca coisa a ser feito nesta etapa. Já um modelo classificador XGBoost, precisa que você siga determinadas etapas de otimização, a fim de não resultar em overfitting ou piora no desempenho.\n",
+        "\n",
+        "Hyperparameters tunning é uma arte, porém com método. Não use os dados de teste e trabalhe com Grid Search."
+      ],
+      "metadata": {
+        "id": "qJS6xAIuIcGB"
       }
     }
   ]
