--- a/42_Workflow_para_Machine_Learning.ipynb
+++ b/42_Workflow_para_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOaKNl3Eo1xSBKnCsx0ttEJ",
+      "authorship_tag": "ABX9TyPdZycTIH0vLktaAs2zSsKC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -517,6 +517,26 @@
       ],
       "metadata": {
         "id": "qJS6xAIuIcGB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 6 Deploy do Modelo\n",
+        "\n",
+        "<center><img src=\"https://blog-geek-midia.s3.amazonaws.com/wp-content/uploads/2020/11/11154014/o-que-e-deploy-e1605120444248.png\" width=\"55%\"></center>\n",
+        "\n",
+        "\n",
+        "Deploy significar colocar o modelo em produção. Isso pode ser tão simples como disponibilizar uma API para ser consumida (que retorna as previsões do seu modelo), ou um sistema completo.\n",
+        "\n",
+        "Tenha em mente os seguintes pontos, importantes para o deploy:\n",
+        "\n",
+        "* Os seus novos dados devem ter a mesma distribuição, aquele usado nos dados de treino e validação.\n",
+        "* Reveja o seu pipeline e identifique quais pré-processamentos foram feitos.\n",
+        "* Reavalie o modelo constantemente. Decida se é necessário retreinar. Caso seja, mude a distribuição que será aplicada."
+      ],
+      "metadata": {
+        "id": "y6OuRqRuIjAx"
       }
     }
   ]
