--- a/42_Workflow_para_Machine_Learning.ipynb
+++ b/42_Workflow_para_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdZycTIH0vLktaAs2zSsKC",
+      "authorship_tag": "ABX9TyM67MG1xo+1onB1WikzmRt4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -537,6 +537,33 @@
       ],
       "metadata": {
         "id": "y6OuRqRuIjAx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra S1 - Adquirir os Dados**\n",
+        "\n",
+        "Veja alguns exemplos de perguntar interessantes para eta etapa:\n",
+        "\n",
+        "De onde virão os seus dados? De um csv, xls, de um banco de dados mysql, consumindo microserviços, fazendo web scraping ou usando APIs disponibilizadas por empresas como Twitter, RD Station e Google?\n",
+        "Se for por meio de APIs, quais são as regras para não ser bloqueado? O consumo de dados é gratuito? Precisa criar uma chave?\n",
+        "Se for por meio das planilhas da sua empresa, você sabe se elas têm dependências, se alguém pode alterar a lógica ou corromper o arquivo?\n",
+        "Os lançamentos são manuais, por meio de campos abertos, ou fechados?\n",
+        "Os dados estão minimamente balanceados?\n",
+        "As informações representam estatisticamente todas as situações possíveis?\n",
+        "Depois de importar os dados, você realizou cheques para ver se eles estão consistentes?\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "GnsuvY3DIwMx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "_mFL-bHRI2bZ"
       }
     }
   ]
