--- a/42_Workflow_para_Machine_Learning.ipynb
+++ b/42_Workflow_para_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM67MG1xo+1onB1WikzmRt4",
+      "authorship_tag": "ABX9TyMPELcpNl+GNGlV0j3TVMsl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -561,7 +561,11 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "## **Referências**\n",
+        "\n",
+        "[Guideline do Google](https://developers.google.com/machine-learning/guides/text-classification)"
+      ],
       "metadata": {
         "id": "_mFL-bHRI2bZ"
       }
